--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,49 @@
 {
-  "name": "sunnysideup/skeleton",
-  "description": "A skeleton for Silverstripe CMS modules.",
-  "type": "silverstripe-vendormodule",
-  "keywords": [
-    "hierarchical",
-    "list",
-    "expandable",
-    "accordion",
-    "list",
-    "content browser"
-  ],
-  "license": "BSD-3-Clause",
-  "require": {
-    "silverstripe/framework": "^5.0",
-    "silverstripe/admin": "^2.0"
-  },
-  "require-dev": {
-    "sunnysideup/sswebpack_engine_only": "dev-master",
-    "silverleague/ideannotator": "*",
-    "phpunit/phpunit": "^9.6",
-    "squizlabs/php_codesniffer": "^3.7",
-    "silverstripe/standards": "^1",
-    "phpstan/extension-installer": "^1.3"
-  },
-  "autoload": {
-    "psr-4": {
-      "Sunnysideup\\Skeleton\\": "src/"
-    }
-  },
-  "extra": {
-    "expose": [
-      "client/dist"
+    "name": "sunnysideup/hierarchical-list-field",
+    "description": "A hierarchical-list-field for Silverstripe CMS modules.",
+    "type": "silverstripe-vendormodule",
+    "keywords": [
+        "hierarchical",
+        "list",
+        "expandable",
+        "accordion",
+        "list",
+        "content browser"
+    ],
+    "license": "BSD-3-Clause",
+    "require": {
+        "silverstripe/framework": "^5.0",
+        "silverstripe/admin": "^2.0"
+    },
+    "require-dev": {
+        "sunnysideup/sswebpack_engine_only": "dev-master",
+        "silverleague/ideannotator": "*",
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.7",
+        "silverstripe/standards": "^1",
+        "phpstan/extension-installer": "^1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Sunnysideup\\HierarchicalListField\\": "src/"
+        }
+    },
+    "extra": {
+        "expose": [
+            "client/dist"
+        ]
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "bin": [
+        "bin/npm-build-hierarchical-list-field.sh",
+        "bin/npm-watch-hierarchical-list-field.sh"
+    ],
+    "authors": [
+        {
+            "name": "Nicolaas Thiemen Francken",
+            "email": "modules@sunnysideup.co.nz",
+            "role": "lead developer"
+        }
     ]
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "bin": [
-    "bin/npm-build-skeleton.sh",
-    "bin/npm-watch-skeleton.sh"
-  ],
-  "authors": [
-    {
-      "name": "Nicolaas Thiemen Francken",
-      "email": "modules@sunnysideup.co.nz",
-      "role": "lead developer"
-    }
-  ]
 }
